frontend/styles/User.module.css
.user {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  min-height: 100vh;
  background-color: var(--darker);
  color: white;
}

.user main {
  display: block;
  background-color: var(--darker);
  z-index: 1;
}

.panel {
  display: grid;
  grid-template-columns: 50% 50%;
  height: 80vh;
  width: 75vw;
  border-radius: 12px;
  overflow: hidden;
  background-color: rgba(255, 255, 255, 0.2);
  box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.1);
}

.panel h1 {
  font-size: 30px;
}

.panel hr {
  height: 1px;
  border-style: solid;
}

/* --- Left & right side of the panel --- */
.panel .left,
.panel .right {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  overflow: hidden;
}

/* --- Panel's item(s) properties --- */
.panel .content {
  text-align: center;
  width: 200%;
  max-width: 322px;
}

.panel .content button {
  border: none;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 16px;
}

.panel .content button,
.panel .dividerLabel {
  font-weight: 700;
}

.panel .content button:hover {
  cursor: pointer;
}

.panel .auth button {
  gap: 21px;
  background-color: white;
  padding: 10px;
  width: 100%;
  border-radius: 50px;
  font-size: 12px;
}

.panel .auth button,
.panel .dividerLabel hr {
  width: 100%;
}

.panel .dividerLabel {
  user-select: none;
  display: flex;
  flex-direction: row;
  align-items: center;
  color: rgba(255, 255, 255, 0.5);
  border-color: rgba(255, 255, 255, 0.5);
  gap: 10px;
}

.panel .auth,
.panel .dividerLabel {
  margin: 20px 0;
}

/* --- Form style --- */
.panel form {
  display: flex;
  flex-direction: column;
  gap: 20px;
  margin: 0px 0 20px 0;
  text-align: left;
}

.panel form div {
  display: inherit;
  flex-direction: column;
  gap: 10px;
}

.panel form label {
  font-size: 16px;
  font-weight: bold;
}

.panel form input {
  font-size: 16px;
  height: 44px;
  border: none;
  border-radius: 5px;
  padding: 12px 16px;
}

.panel form input:focus {
  outline: none;
  background-color: var(--light);
}

.panel form input::placeholder {
  color: var(--placeholder);
}

.panel form button {
  background-color: var(--yellow);
  padding: 14px 0;
  border-radius: 10px;
}

.panel form button:hover {
  background-color: var(--lemon);
}

.panel a:hover {
  color: var(--lemon);
}

.panel form input,
.panel form button,
.panel a {
  transition: all 125ms;
}

.panel form hr {
  border-color: var(--gray);
}

.panel .right img {
  object-fit: cover;
  min-height: 100%;
  min-width: 100%;
}

/* --- Vector background --- */
.bg {
  z-index: 0;
  opacity: 0.2;
}

.bg .decor1,
.bg .decor2 {
  position: fixed;
  height: 200px;
}

.bg .decor1 {
  bottom: 0;
  left: 0;
}

.bg .decor2 {
  top: 0;
  right: 0;
}

/* === Media Query === */
@media screen and (max-width: 1100px) {
  .panel {
    grid-template-columns: 100% 0%;
  }

  .panel .right {
    display: none;
  }
}

@media screen and (max-height: 650px) {
  .panel .content {
    transform: scale(0.9);
  }
}

@media screen and (max-height: 580px) {
  .panel .content {
    transform: scale(0.8);
  }
}

@media screen and (max-height: 530px) {
  .panel .content {
    transform: scale(0.7);
  }
}

@media screen and (max-height: 450px) {
  .panel .content {
    transform: scale(0.6);
  }
}

@media screen and (max-width: 530px) {
  .panel {
    height: 100vh;
    width: 100vw;
    background-color: unset;
  }

  .panel .content {
    width: 80%;
    max-width: unset;
  }

  .bg {
    opacity: 0.05;
  }
}

